--- a/app/src/main/res/layout/activity_stopwatch.xml
+++ b/app/src/main/res/layout/activity_stopwatch.xml
@@ -6,62 +6,47 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@color/purple_200"
+    android:padding="16dp">
+    <TextView
 
-    <!-- Add some background color -->
-    android:background="#0F9D58"
-    android:padding="16dp"
-    tools:context="org.geeksforgeeks.stopwatch.StopwatchActivity">
 
-<TextView
+        android:id="@+id/time_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:paddingTop="32dp"
+        android:textAppearance="@android:style/TextAppearance.Large"
+        android:textSize="56sp" />
 
-    <!-- We will use text view "time_view" -->
-    <!-- to display the number of seconds. -->
-    android:id="@+id/time_view"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_gravity="center_horizontal"
+    <Button
 
-    <!-- These below attributes make the stopwatch -->
-    <!-- timer nice and big. -->
-    android:textAppearance="@android:style/TextAppearance.Large"
-    android:textSize="56sp" />
+        android:id="@+id/start_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="20dp"
+        android:onClick="onClickStart"
+        android:text="@string/start" />
+    <Button
 
-<Button
-    <!-- This code is for the Start button.
-    android:id="@+id/start_button"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_gravity="center_horizontal"
-    android:layout_marginTop="20dp"
+        android:id="@+id/stop_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="8dp"
 
-    <!-- When it gets clicked, the Start button -->
-    <!-- calls the onClickStart() method. -->
-    android:onClick="onClickStart"
-    android:text="@string/start" />
-<Button
 
-    <!-- This code is for the Stop button. -->
-    android:id="@+id/stop_button"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_gravity="center_horizontal"
-    android:layout_marginTop="8dp"
+        android:onClick="onClickStop"
+        android:text="@string/stop" />
+    <Button
 
-    <!-- When it gets clicked, the Stop button -->
-    <!-- calls the onClickStop() method. -->
-    android:onClick="onClickStop"
-    android:text="@string/stop" />
-<Button
+        android:id="@+id/reset_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="8dp"
 
-    <!-- This code is for Reset button. -->
-    android:id="@+id/reset_button"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_gravity="center_horizontal"
-    android:layout_marginTop="8dp"
-
-    <!-- When it gets clicked, the Reset button -->
-    <!-- calls the onClickReset() method. -->
-    android:onClick="onClickReset"
-    android:text="@string/reset" />
-    </LinearLayout>
+        android:onClick="onClickReset"
+        android:text="@string/reset" />
+</LinearLayout>
